<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BSB:TBG Assistant</string>
    <string name="title_item_list">Items</string>
    <string name="logo">Logo</string>
    <string name="legalStuff">BattleStar Galactica © USA Cable Entertainment LLC. All rights reserved.\nBoard game mechanics and rules © 2012 Fantasy Flight Publishing, Inc.</string>
    <string name="info1">Programming &amp; additional graphics:\n&#9;&#9;&#9;Dominik Zieliński</string>
    <string name="infoTitle">Informations</string>
    <string name="infoDesc">About the application</string>
    <string name="FFGLink"><a href="http://www.fantasyflightgames.com/bsg/">BSG:TBG Homepage</a></string>
    <string name="rulesTitle">Rules Summary</string>
    <string name="rulesDesc">Quick reference to major game rules</string>
    <string-array name="playersCount">
        <item>1 Player</item>
        <item>2 Players</item>
        <item>3 Players</item>
        <item>4 Players</item>
        <item>5 Players</item>
        <item>6 Players</item>
        <item>7 Players</item>
    </string-array>
    <string name="youAreACylon">\&quot;You Are a Cylon\&quot;</string>
    <string name="youAreNotACylon">\&quot;You Are Not a Cylon\&quot;</string>
    <string name="youAreASympathizer">\&quot;You Are a Sympathizer\&quot;</string>
    <string name="youAreAMutineer">\&quot;You Are a Mutineer\&quot;</string>
    <string name="agendaHostile">1x Hostile Agenda (Cylon Leader)</string>
    <string name="agendaSympathetic">1x Sympathetic Agenda (Cylon Leader)</string>
    <string name="motive">2x Motive (Cylon Leader)</string>
    <string name="specialRules">Special Rules</string>
    <string name="onePlayerSR">Check special rules for one player game variant!</string>
    <string name="twoPlayersSR">Deal 1 Loyalty card to each player only at the start of the sleeper phase. Add a number of \&quot;You Are Not a Cylon\&quot; cards to the Loyalty Deck equal to the number of resources that are red.</string>
    <string name="closeBtn">Close</string>
    <string name="shipRaider">Raider</string>
    <string name="shipHeavyRaider">Heavy Raider</string>
    <string name="shipViper2">Viper Mk II</string>
    <string name="shipViper7">Viper Mk VII</string>
    <string name="shipCenturion">Centurion</string>
    <string name="shipCivilian">Civilian Ship</string>
    <string name="shipGalactica">Galactica</string>
    <string name="shipBasestar">Basestar</string>
    <string name="nuke">Nuke</string>
    <string name="attackRaider">3&#8211;8 = Destroyed</string>
    <string name="attackHeavyRaider">7&#8211;8 = Destroyed</string>
    <string name="attackViper2">5&#8211;7 = Damaged\n8 = Destroyed</string>
    <string name="attackViper7">6&#8211;7 = Damaged\n8 = Destroyed</string>
    <string name="attackCivilian">Automatically Destroyed\n(no die roll)</string>
    <string name="attackGalactica"><i>With Raider:</i>\n8 = Damaged\n<i>With Basestar</i>:\n4&#8211;8 = Damaged</string>
    <string name="attackBasestar"><i>With Viper:</i>\n8 = Damaged\n<i>With Galactica:</i>\n5&#8211;8 = Damaged</string>
    <string name="attackNuke">1&#8211;2 = Basestar 2xDamaged\n3&#8211;6 = Basestar Destroyed\n7 = Basestar Destroyed\n+3 Raiders Destroyed\n8 = Every ship in the\nspace area Destroyed</string>
    <string-array name="tokensModes">
        <item>Galactica Damages</item>
        <item>Basestar Damages</item>
        <item>Pegasus Damages</item>
        <item>Galactica &amp; Pegasus Damages</item>
    </string-array>

    <string name="losInfo1">*  Character from \"Pegasus\" Expansion</string>
    <string name="losInfo2">** Character from \"Exodus\" Expansion</string>
    <string name="losInfo3">*** Character from \"Daybreak\" Expansion</string>

    <!--Menu-->
    <string name="menu_title_damage_tokens">Tokens</string>
    <string name="menu_desc_damage_tokens">Generates random tokens</string>
    <string name="menu_title_attack_table">Attack Table</string>
    <string name="menu_desc_attack_table">Die results required to destroy/damage ships</string>
    <string name="menu_title_loyalty_deck">Loyalty Deck</string>
    <string name="menu_desc_loyalty_deck">Creates Loyalty Deck</string>
    <string name="menu_title_los">Lines of Succession</string>
    <string name="menu_desc_los">Lines of Succession for President, Admiral &amp; CAG</string>

    <!--Loyalty Deck-->
    <string name="loyalty_label_players_count">Number of Players:</string>
    <string name="loyalty_label_options">Options:</string>
    <string name="loyalty_label_baltar_in_play">Gaius Baltar (Original) in game</string>
    <string name="loyalty_label_boomer_in_play">Sharon \"Boomer\" Valerii in game</string>
    <string name="loyalty_label_cylon_leader_in_play">Cylon Leader in game</string>
    <string name="loyalty_label_exodus_rules">\"Exodus\" Expansion Rules</string>
    <string name="loyalty_label_daybreak_rules">\"Daybreak\" Expansion Rules</string>
    <string name="loyalty_label_create_deck">Create Loyalty Deck</string>
    <plurals name="players_count">
        <item quantity="one">%d Player</item>
        <item quantity="other">%d Players</item>
    </plurals>

    <!--Loyalty-->
    <string name="loyalty_you_are_not_a_cylon">%d "You Are Not a Cylon" cards</string>
    <string name="loyalty_you_are_a_cylon">%d "You Are a Cylon" cards</string>
    <string name="loyalty_you_are_a_sympathizer_variant">"You Are a Sympathizer/Mutineer"
        card</string>
    <string name="loyalty_cylon_leader_motive">%d Motive cards for Cylon Leader</string>
    <string name="loyalty_cylon_leader_hostile_agenda">Hostile Agenda card for Cylon Leader</string>
    <string name="loyalty_cylon_leader_sympathetic_agenda">Sympathetic Agenda card for Cylon
        Leader</string>

    <!--Lines of Succession-->
    <string name="los_title_president">President</string>
    <string name="los_title_admiral">Admiral</string>
    <string name="los_title_cag">CAG</string>
    <string name="los_format">%1$d. %2$s</string>

    <!--Characters-->
    <string name="char_chief_galen_tyrol">"Chief" Galen Tyrol</string>
    <string name="char_anastasia_dee_dualla_pegasus">Anastasia "Dee" Dualla*</string>
    <string name="char_brendan_hot_dog_costanza_daybreak">Brendan "Hot Dog" Costanza***</string>
    <string name="char_callandra_cally_tyrol_exodus">Callandra "Cally" Tyrol**</string>
    <string name="char_ellen_tigh_pegasus">Ellen Tigh*</string>
    <string name="char_felix_gaeta_exodus">Felix Gaeta**</string>
    <string name="char_gaius_baltar">Gaius Baltar</string>
    <string name="char_gaius_baltar_daybreak">Gaius Baltar***</string>
    <string name="char_helena_cain_pegasus">Helena Cain*</string>
    <string name="char_kara_starbuck_thrace">Kara "Starbuck" Thrace</string>
    <string name="char_karl_helo_agathon">Karl "Helo" Agathon</string>
    <string name="char_karl_helo_agathon_daybreak">Karl "Helo" Agathon***</string>
    <string name="char_laura_roslin">Laura Roslin</string>
    <string name="char_lee_apollo_adama">Lee "Apollo" Adama</string>
    <string name="char_lee_apollo_adama_daybreak">Lee "Apollo" Adama***</string>
    <string name="char_louanne_kat_katraine_pegasus">Louanne "Kat" Katraine*</string>
    <string name="char_louis_hoshi_daybreak">Louis Hoshi***</string>
    <string name="char_romo_lampkin_daybreak">Romo Lampkin***</string>
    <string name="char_samuel_t_anders_exodus">Samuel T. Anders**</string>
    <string name="char_saul_tigh">Saul Tigh</string>
    <string name="char_sharon_boomer_valerii">Sharon "Boomer" Valerii</string>
    <string name="char_sherman_doc_cottle_daybreak">Sherman "Doc" Cottle***</string>
    <string name="char_tom_zarek">Tom Zarek</string>
    <string name="char_tom_zarek_daybreak">Tom Zarek***</string>
    <string name="char_tory_foster_exodus">Tory Foster**</string>
    <string name="char_william_adama">William Adama</string>

    <!--Token Modes-->
    <string name="token_dmg_galactica">Damages: Galactica</string>
    <string name="token_dmg_basestar">Damages: Basestar</string>
    <string name="token_dmg_pegasus">Damages: Pegasus</string>
    <string name="token_dmg_galactica_pegasus">Damages: Galactica &amp; Pegasus</string>

</resources>