<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loyalty_label_players_count"/>

    <Spinner
        android:id="@+id/sp_players_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loyalty_label_options"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cb_baltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loyalty_label_baltar_in_play"/>

        <CheckBox
            android:id="@+id/cb_boomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loyalty_label_boomer_in_play"/>

        <CheckBox
            android:id="@+id/cb_cylon_leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loyalty_label_cylon_leader_in_play"/>

        <CheckBox
            android:id="@+id/cb_exodus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loyalty_label_exodus_rules"/>

        <CheckBox
            android:id="@+id/cb_daybreak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loyalty_label_daybreak_rules"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_create_deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/loyalty_label_create_deck"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bsg_frame"
        android:padding="5dp"/>

</LinearLayout>
